--- a/projects.html
+++ b/projects.html
@@ -51,6 +51,23 @@
                 <a class="link link-secondary" href="https://github.com/Syedmha/The-Office-Quiz" target="_blank">View Source</a>
             </div>
 
+            <div class="showcase-list container container-center ">
+                <h1>Minion Translation App</h1>
+                <small>English to Banana language</small>
+                <p>This app converts English to Banana Languge made with vanillaJS</p>
+                <a class="link link-primary"
+                    href="https://syed-minion-banana-translation.netlify.app/" target="_blank">Try it</a>
+                <a class="link link-secondary" href="https://github.com/Syedmha/minion-tanslation" target="_blank">View Source</a>
+            </div>
+
+            <div class="showcase-list container container-center ">
+                <h1>Valyrian Translation App</h1>
+                <small>English to Valyrian language</small>
+                <p>This app converts English to Valyrian Languge inspired from the famous TV show "Game Of Thrones" made with vanillaJS</p>
+                <a class="link link-primary"
+                    href="https://syed-valyrian-translation.netlify.app/" target="_blank">Try it</a>
+                <a class="link link-secondary" href="https://github.com/Syedmha/valyrian-translation" target="_blank">View Source</a>
+            </div>
         </li>
 
     </ul>
