--- a/projects.html
+++ b/projects.html
@@ -68,6 +68,22 @@
                     href="https://syed-valyrian-translation.netlify.app/" target="_blank">Try it</a>
                 <a class="link link-secondary" href="https://github.com/Syedmha/valyrian-translation" target="_blank">View Source</a>
             </div>
+            <div class="showcase-list container container-center ">
+                <h1>Emoji meaning app</h1>
+                <small>English to Valyrian language</small>
+                <p>This app tells you the name of the emoji clicked or types in the box</p>
+                <a class="link link-primary"
+                    href="https://9yr4v.csb.app/" target="_blank">Try it</a>
+                <a class="link link-secondary" href="https://github.com/Syedmha/emoji-meaning" target="_blank">View Source</a>
+            </div>
+            <div class="showcase-list container container-center ">
+                <h1>Food recommendation app</h1>
+                <small>English to Valyrian language</small>
+                <p>This app recommends different cuisines from the world</p>
+                <a class="link link-primary"
+                    href="https://lsq1x.csb.app/" target="_blank">Try it</a>
+                <a class="link link-secondary" href="https://github.com/Syedmha/food-recommendations" target="_blank">View Source</a>
+            </div>
         </li>
 
     </ul>
