--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,7 @@
             </div>
             <div class="showcase-list container container-center ">
                 <h1>Emoji meaning app</h1>
-                <small>English to Valyrian language</small>
+                <small>Emoji name finder</small>
                 <p>This app tells you the name of the emoji clicked or types in the box</p>
                 <a class="link link-primary"
                     href="https://9yr4v.csb.app/" target="_blank">Try it</a>
@@ -78,11 +78,19 @@
             </div>
             <div class="showcase-list container container-center ">
                 <h1>Food recommendation app</h1>
-                <small>English to Valyrian language</small>
+                <small>Food recommendations</small>
                 <p>This app recommends different cuisines from the world</p>
                 <a class="link link-primary"
                     href="https://lsq1x.csb.app/" target="_blank">Try it</a>
                 <a class="link link-secondary" href="https://github.com/Syedmha/food-recommendations" target="_blank">View Source</a>
+            </div>
+            <div class="showcase-list container container-center ">
+                <h1>Todo app</h1>
+                <small>Todo app</small>
+                <p>Helps you to make todo</p>
+                <a class="link link-primary"
+                    href="https://sad-allen-e97d72.netlify.app/" target="_blank">Try it</a>
+                <a class="link link-secondary" href="https://github.com/Syedmha/to-do-app" target="_blank">View Source</a>
             </div>
         </li>
 
